--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
+    "dotenv": "^16.0.1",
     "ms": "^2.1.3",
     "node-fetch": "^3.2.8",
     "random-question": "^0.2.1"
